CNSDEVCOLECT/force-app/main/default/objects/DocuwareMetadata__c/DocuwareMetadata__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lista de metadata</description>
    <label>DocuwareMetadata</label>
</CustomObject>