CNSDEVCOLECT/force-app/main/default/objects/DocuwareMetadata__c/fields/Index_Label__c.field-meta.xml
<CustomField>
    <fullName>Index_Label__c</fullName>
    <label>Index Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>