CNSDEVCOLECT/force-app/main/default/objects/DocuwareMetadata__c/fields/Index_value__c.field-meta.xml
<CustomField>
    <fullName>Index_value__c</fullName>
    <label>Index value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>