CNSDEVCOLECT/force-app/main/default/objects/DocuwareMetadata__c/fields/Type_Index_List__c.field-meta.xml
<CustomField>
    <fullName>Type_Index_List__c</fullName>
    <label>Type Index List</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>