CNSDEVCOLECT/force-app/main/default/objects/DocuwareMetadata__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Index_Label__c</columns>
    <columns>Index_value__c</columns>
    <columns>Type_Index_List__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>